# lg-deploy

./: .gitignore  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
docs/: architecture-hld.md  architecture-lld.md  software-requirements.md  system-requirements.md  test-strategy.md
src/lg_deploy/: main.py
tests/: test_health.py  test_logging.py
