[project]
name = "lg-deploy"
version = "0.1.0"
description = "Open-source deployment runtime for LangGraph agents, built for scalable and production use."
authors = [ { name = "janardhanhere", email = "janardhan.balaji@outlook.com" } ]
license = { text = "apache 2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.127.1",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
